<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activitys.FormCalendarActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background">

        <EditText
            android:id="@+id/et_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/titulo_tarefa"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="8dp"
            android:hint="@string/data_evento"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/hora_evento"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/et_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/local_evento"
            android:minHeight="48dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_save"
            style="@style/ButtonSave"
            android:text="@string/save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_local"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>