<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.FormLoginFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:src="@drawable/emaus_ofic_br"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>

    <View
        android:id="@+id/container_components"
        style="@style/ContainerComponents"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"/>

    <EditText
        android:id="@+id/et_email"
        style="@style/EditText"
        android:hint="nome@email.com"
        android:drawableRight="@drawable/ic_baseline_email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="@id/container_components"
        app:layout_constraintEnd_toEndOf="@id/container_components"
        app:layout_constraintTop_toTopOf="@id/container_components" />

    <EditText
        android:id="@+id/et_senha"
        style="@style/EditText"
        android:hint="******"
        android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
        android:inputType="numberPassword"
        app:layout_constraintStart_toStartOf="@id/container_components"
        app:layout_constraintEnd_toEndOf="@id/container_components"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        style="@style/Button"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_senha" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:indeterminateTint="@color/white"
        android:visibility="invisible"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_components" />

    <TextView
        android:id="@+id/cadastro"
        style="@style/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/cadastro"
        android:textColor="@color/black"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progressbar" />
    <TextView
        android:id="@+id/esqueci_senha"
        style="@style/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/esqueciSenha"
        android:textColor="@color/black"
        app:cardElevation="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cadastro" />

    <com.google.android.gms.common.SignInButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/esqueci_senha"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>