<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".ui.activitys.MainActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/emaus_ofic_br"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/background_button"
                    android:drawableBottom="@drawable/ic_book"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bt_nossa_historia"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button1" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/background_button"
                    android:drawableBottom="@drawable/ic_event"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bt_eventos"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/background_button"
                    android:drawableBottom="@drawable/ic_groups"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bt_grupos"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button3" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/background_button"
                    android:drawableBottom="@drawable/ic_redes"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bt_redes_sociais"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/background_button"
                    android:drawableBottom="@drawable/ic_contribua_br"
                    android:padding="15dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bt_contribua"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button6"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/background_button"
                    android:drawableBottom="@drawable/ic_baseline_storefront_24"
                    android:padding="15dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/bt_loja"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button6" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>